CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(RTKCLASS)#!!!HERE!!!
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#SET(CMAKE_BUILD_TYPE Release)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O2 -march=native")
SET(CMAKE_CXX_STANDARD 11)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib /usr/local/lib)

#============AUTOGENERATE 1===========
LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
#============AUTOGENERATE 2===========
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
