SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
ADD_DEFINITIONS(WIN_DLL)
SET(RTKLIB_SOURCE
${PROJECT_SOURCE_DIR}/include/rtklib.h
./app/rtkrcv/rtkrcv.cpp
./src/ephemeris.cpp
./src/geoid.cpp
./src/ionex.cpp
./src/lambda.cpp
./src/options.cpp
./src/pntpos.cpp
./src/postpos.cpp
./src/ppp.cpp
./src/ppp_ar.cpp
./src/ppp_corr.cpp
./src/preceph.cpp
./src/qzslex.cpp
./src/rcvraw.cpp
./src/rinex.cpp
./src/rtcm.cpp
./src/rtcm2.cpp
./src/rtcm3.cpp
./src/rtcm3e.cpp
./src/rtkcmn.cpp
./src/rtkpos.cpp
./src/rtksvr.cpp
./src/sbas.cpp
./src/solution.cpp
./src/stream.cpp
./src/streamsvr.cpp
./src/tides.cpp
./src/tle.cpp
./src/rcv/binex.cpp
./src/rcv/cmr.cpp
./src/rcv/crescent.cpp
./src/rcv/gw10.cpp
./src/rcv/javad.cpp
./src/rcv/novatel.cpp
./src/rcv/nvs.cpp
./src/rcv/rcvlex.cpp
./src/rcv/rt17.cpp
./src/rcv/septentrio.cpp
./src/rcv/skytraq.cpp
./src/rcv/ss2.cpp
./src/rcv/ublox.cpp
)
ADD_LIBRARY(rtklib ${RTKLIB_SOURCE})

